[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/File_explore.gd" type="Script" id=1]

[node name="File_explore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.792157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.246094
anchor_top = 0.176389
anchor_right = 0.753906
anchor_bottom = 0.823611
rect_min_size = Vector2( 176, 61.6 )
window_title = "Salvar um Arquivo"
access = 2
show_hidden_files = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Save_path" type="PanelContainer" parent="."]
margin_left = 184.0
margin_top = 128.0
margin_right = 312.0
margin_bottom = 592.0

[node name="Vbox" type="VBoxContainer" parent="Save_path"]
margin_left = 3.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 457.0

[node name="Tittle" type="Label" parent="Save_path/Vbox"]
margin_right = 122.0
margin_bottom = 20.0
text = "Recent files"

[node name="Hs" type="HSeparator" parent="Save_path/Vbox"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 28.0

[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="hide" from="FileDialog" to="." method="_on_FileDialog_hide"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
